[package]
name = "ottotom"
version = "0.31.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/max-te/opentelemetry-openmetrics-text/"
keywords = ["opentelemetry", "observability", "prometheus", "metrics"]
readme = "README.md"
description = "Conversion of OpenTelemetry metrics to OpenMetrics Text format"

[workspace]
resolver = "3"
members = ["testsupport"]
[workspace.dependencies]
opentelemetry = { version = "*", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "metrics",
] }
ottotom-testsupport = { path = "testsupport" }

[dependencies]
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
memchr = { version = "2.7.6", optional = true }
itoa = { version = "1.0.15", optional = true }
ryu = { version = "1.0.20" }
tokio = { version = "1.48.0", default-features = false, features = [
    "sync",
], optional = true }
tracing = { version = "0.1.41", optional = true }
ufmt = { version = "0.2.0", features = ["std"] }

[features]
exporter = ["dep:tokio"]
tracing = ["dep:tracing"]
experimental-histogram-min-max = []
otel_scope_info = []
fast = ["dep:itoa", "dep:memchr"]
default = ["tracing", "exporter", "otel_scope_info", "fast"]

[dev-dependencies]
ottotom-testsupport.workspace = true
openmetrics-parser = "0.4.4"
tango-bench = "0.6"
insta = { version = "1.43.2" }
tokio = { version = "1", features = ["rt"] }

[[bench]]
name = "converter"
harness = false
