[package]
name = "ottotom-testsupport"
version = "0.31.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/max-te/opentelemetry-openmetrics-text/"
description = "Test helpers used for the ottotom crate tests"

[dependencies]
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
] }
